--- a/source/_quarto.yml
+++ b/source/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Abdul_Rehman"
+  title: "Abdul Rehman"
   navbar:
     left:
       - href: index.qmd
