--- a/source/_quarto.yml
+++ b/source/_quarto.yml
@@ -19,12 +19,14 @@ website:
       - text: "---"
 
       - section: "Projects"
+        href: index.qmd
         contents:
           - ./projects/dataanalytics.qmd
           - ./projects/iluvatar.qmd
           - ./projects/schedext_based_scheduling.qmd
 
       - section: "Blog Posts"
+        href: index.qmd
         contents:
           - ./posts/design_philosophy.qmd
           - ./posts/luddy_summer_school.qmd
