--- a/source/_quarto.yml
+++ b/source/_quarto.yml
@@ -21,15 +21,16 @@ website:
       - section: "Projects"
         href: index.qmd
         contents:
-          - ./projects/dataanalytics.qmd
-          - ./projects/iluvatar.qmd
           - ./projects/schedext_based_scheduling.qmd
+          - ./projects/iluvatar.qmd
+          - ./projects/dataanalytics.qmd
 
       - section: "Blog Posts"
         href: index.qmd
         contents:
-          - ./posts/design_philosophy.qmd
+          - ./posts/jobexp.qmd
           - ./posts/luddy_summer_school.qmd
+          - ./posts/design_philosophy.qmd
 
   back-to-top-navigation: false 
   page-footer: "Copyright 2024, Abdul Rehman"
