--- a/source/_quarto.yml
+++ b/source/_quarto.yml
@@ -11,6 +11,7 @@ website:
     style: "docked"
     search: true
 
+    collapse-level: 1 
     contents:
 
       - text: "---"
@@ -18,19 +19,23 @@ website:
         text: Home
       - text: "---"
 
+      - text: "---"
       - section: "Projects"
         href: index.qmd
         contents:
           - ./projects/schedext_based_scheduling.qmd
           - ./projects/iluvatar.qmd
           - ./projects/dataanalytics.qmd
+      - text: "---"
 
+      - text: "---"
       - section: "Blog Posts"
         href: index.qmd
         contents:
           - ./posts/jobexp.qmd
           - ./posts/luddy_summer_school.qmd
           - ./posts/design_philosophy.qmd
+      - text: "---"
 
   back-to-top-navigation: false 
   page-footer: "Copyright 2024, Abdul Rehman"
